tests/expected_invalid_affine_field_extract.diag.out
<input>:11:5: error: field access on affine value requires a copyable field type
        envelope.receipt
        ^^^^^^^^^^^^^^^^
